<resources>
  <string name="app_name">MobileProject</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="hint_username">\ \ Username</string>
  <string name="hint_password">\ \ Password</string>
  <string name="hint_confirmpassword">\ \ Confirm password</string>
  <string name="hint_phone">\ \ Phone number</string>
  <string name="register">Registration</string>
  <string name="login">Login</string>
  <string name="registerText">Don\'t have an account? register now.</string>
  <string name="loginText">Already have an account? Login</string>
</resources>

