<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    tools:context="Activities.MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center_vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:textColor="#64f9ec"
        />

    <EditText
        style="@style/editText_style"
        android:hint="@string/hint_username"
        android:layout_marginBottom="15dp"
        android:id="@+id/et_username"
        android:maxLines="1"
        android:textDirection="ltr"/>

    <EditText
        style="@style/editText_style"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:id="@+id/et_password"/>

    <Button
        style="@style/button_style"
        android:text="LogIn"
        android:id="@+id/bn_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:textSize="14dp"
        android:textStyle="italic"
        android:id="@+id/tv_register"/>
  </LinearLayout>
</RelativeLayout>